Writing the PCI driver (for now edu device), interrupt received correctly for now

--- a/kernel-development/fx-module/Makefile
+++ b/kernel-development/fx-module/Makefile
@@ -1,5 +1,5 @@
 obj-m:=fx.o
 all:
-	make -C /home/lore/tesi/linux M=$(shell pwd) modules
+	make -C /home/lore/MasterThesis/linux M=$(shell pwd) modules
 clean:
-	make -C /home/lore/tesi/linux M=$(shell pwd) clean
+	make -C /home/lore/MasterThesis/linux M=$(shell pwd) clean
